fix: collectible alignment inside container, dashboard collectibles

--- a/src/components/Wallet/Dashboard/Collectibles/Collectible/Collectible.module.scss
+++ b/src/components/Wallet/Dashboard/Collectibles/Collectible/Collectible.module.scss
@@ -21,16 +21,12 @@ $details-size: 3.75rem;
   .artworkWrapper {
     max-height: $collectible-size;
     height: 100%;
-    align-items: start;
+    align-items: center;
     background-color: rgba($c-fiord, 0.2);
 
     .artwork {
       width: 100%;
       max-height: $collectible-size;
-
-      &.fallbackImage {
-        align-self: center;
-      }
     }
   }
 
